[Silver I] Title: 볼 모으기, Time: 464 ms, Memory: 35192 KB, Score: 100 point -BaekjoonHub